# tg-bot-for-practic

./: .dockerignore  .gitignore  .pre-commit-config-action.yaml  .pre-commit-config.yaml  .pre-commit-config.yaml.template  Dockerfile  README.md  Taskfile.yml  build_version  build_version.bak  compose-dev.yaml  docker-compose-dev.yaml  entrypoint.sh  get_file_id_for_bot.py  get_user_id.py  pyproject.toml  requirements-dev.txt  requirements.txt  start.py
.github/workflows/: checks.yml  deploy.yml  main.yml
bot/: __main__.py  main.py
bot/config/: __init__.py  constants.py  main.py  photo_ids.py
bot/telegram/base/: __init__.py  contact_message.py  endpoint.py  message.py
bot/telegram/base/custom_filters/: __init__.py
bot/telegram/commands/: kas.py  paid.py  payment.py  payments_info.py  south.py  start.py
bot/telegram/messages/: resend.py
bot/telegram/templates/: catalog.jinja  text.py
src/: __main__.py  main.py  run.py
src/config/: __init__.py  builder.py  constants.py  get_name.py  get_version.py  main.py  photo_ids.py  project_info.py  project_name.py  settings.py
src/telegram/base/: __init__.py  callback_query.py  command.py  contact_message.py  endpoint.py  message.py
src/telegram/base/custom_filters/: __init__.py  callback_filter.py
src/telegram/commands/: fethiye.py  kas.py  paid.py  payment.py  payments_info.py  south.py  special_offer.py  start.py
src/telegram/custom_filter/: __init__.py  contact.py
src/telegram/errors/: callback.py
src/telegram/messages/: resend.py
src/telegram/templates/: catalog.jinja  text.py
version_build/: build.py
