[tool.poetry]
name = "sales"
version = "0.1.0"
description = ""
authors = ["Anton Zimin <zimkaa87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyrogram = "^2.0.106"
pydantic = "^2.4.0"
pydantic-settings = "^2.0.3"
dependency-injector = "^4.41.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"
isort = "^5.12.0"
pytest = "^7.4.2"
pylint = "^2.17.6"
safety = "^2.3.5"
ruff = "^0.0.291"
coverage = "^7.3.1"
autoflake = "^2.2.1"
bandit = "^1.7.5"
pre-commit = "^3.4.0"

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["venv", "tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["venv/", "alembic/"]

[tool.isort]
line_length = 120
profile = "black"
multi_line_output = 7
lines_after_imports = 2
force_single_line = true

[tool.ruff]
line-length = 120
exclude = ["__init__.py", "alembic", ".venv"]

[tool.black]
line-length = 120
