[tool.poetry]
name = "sales_bot"
version = "0.9.1"
description = ""
authors = ["Anton Zimin <zimkaa87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyrogram = "^2.0.106"
pydantic = "^2.4.0"
pydantic-settings = "^2.0.3"
dependency-injector = "^4.41.0"
tgcrypto = "^1.2.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
pytest = "^7.4.2"
coverage = "^7.3.1"
pre-commit = "^3.4.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
cache_dir = "/tmp/pytest_cache"
addopts = "-vvv"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120
fix = true
unsafe-fixes = true
exclude = [
    "alembic/",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
cache-dir = "/tmp/ruff_cache"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",
    "D203",
    "D213",
    "FA102",
    "ANN101",
    "S101",
    # new
    "RUF001",
    "TD003",
    "TD002",
    "ANN001",
    "E501",
    "FIX002",
    "ERA001",
    "FA100",
    "ANN102",
    "RUF012",
]

[tool.ruff.lint.isort]
no-lines-before = ["standard-library", "local-folder"]
known-third-party = []
known-local-folder = ["whole_app"]
lines-after-imports = 2
force-single-line = true

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = ["ANN101", "S101", "S311"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
cache_dir = "/tmp/mypy_cache"
ignore_missing_imports = true
strict = false
exclude = ["~/.pyenv/*", ".venv/", "alembic/"]
